EDU-1475 Update plugin example

--- a/src/example.yml
+++ b/src/example.yml
@@ -2,6 +2,9 @@ educandu/educandu-plugin-example:
   name:
     en: Example plugin
     de: Beispiel-Plugin
+  label:
+    en: Example label
+    de: Beispiel-Label
   currentServerTime:
     en: Current server time
     de: Aktuelle Serverzeit
