Implement model templates and update content

--- a/src/music-puzzle.yml
+++ b/src/music-puzzle.yml
@@ -98,4 +98,13 @@ musikisum/educandu-plugin-music-puzzle:
   us:
     en: lower voice
     de: Unterstimme
+  addModel:
+    en: Add model
+    de: Modell hinzufügen
+  cadence:
+    en: Cadence
+    de: Kadenz
+  circleOfFifths:
+    en: Circle of fifths
+    de: Quintfallsequenz
     
