--- a/src/music-puzzle.yml
+++ b/src/music-puzzle.yml
@@ -81,13 +81,13 @@ musikisum/educandu-plugin-music-puzzle:
     en: E flat minor (Ebm)
     de: es-Moll (Ebm)
   v1:
-    en: 1. voice
+    en: voice 1
     de: 1. Stimme
   v2:
-    en: 2. voice
+    en: voice 2
     de: 2. Stimme
   v3:
-    en: 3. voice
+    en: voice 3
     de: 3. Stimme
   os:
     en: upper voice
