--- a/src/music-puzzle.yml
+++ b/src/music-puzzle.yml
@@ -120,8 +120,8 @@ musikisum/educandu-plugin-music-puzzle:
     en: deceptiv
     de: Trugschluss
   circleOfFifthsLinear:
-    en: Circle of Fifths (Alternative)
-    de: Quintfallsequenz (Alternative)
+    en: Circle of Fifths (Inversions)
+    de: Quintfallsequenz (Umkehrungen)
   fiveSixConsecutive:
     en: "5-6 Side Motion"
     de: "5-6-Seitenbewegung"
