Add parallelism down model

--- a/src/music-puzzle.yml
+++ b/src/music-puzzle.yml
@@ -83,6 +83,12 @@ musikisum/educandu-plugin-music-puzzle:
   numberOfSections:
     en: Sections
     de: Abschnitte
+  parallelismusDown:
+    en: Parallelism down
+    de: Parallelismus abwärts
+  syncopation:
+    en: Syncopations
+    de: Synkopen
   C:
     en: C major (C)
     de: C-Dur (C)
