Add Parallelism up model

--- a/src/music-puzzle.yml
+++ b/src/music-puzzle.yml
@@ -86,6 +86,9 @@ musikisum/educandu-plugin-music-puzzle:
   parallelismusDown:
     en: Parallelism down
     de: Parallelismus abwärts
+  parallelismusUp:
+    en: Parallelism up
+    de: Parallelismus aufwärts
   syncopation:
     en: Syncopations
     de: Synkopen
