--- a/src/music-puzzle.yml
+++ b/src/music-puzzle.yml
@@ -42,14 +42,14 @@ musikisum/educandu-plugin-music-puzzle:
     en: Fauxbourdon Model
     de: Fauxbourdon-Satz
   chromaticBass:
-    en: Chromatic
-    de: Chromatik
+    en: Lamento Bass
+    de: Lamentobass
   isFinal:
-    en: Octave (end)
-    de: Oktavlage (Schluss)
+    en: Ending
+    de: Schluss
   isBegin:
-    en: Root position (Begin)
-    de: Grundstellung (Anfang)
+    en: Root position
+    de: Grundstellung
   lastBassNoteUp:
     en: ending ↑
     de: Abschluss ↑
