Add descriptions in disply mode

--- a/src/music-puzzle.yml
+++ b/src/music-puzzle.yml
@@ -188,3 +188,6 @@ musikisum/educandu-plugin-music-puzzle:
   Ebm:
     en: E flat minor (Ebm)
     de: es-Moll (Ebm)
+  descriptionTitle:
+    en: Description of the voice models used
+    de: Beschreibung der verwendeten Satzmodelle
