Rename key in keyObject to modelkey

--- a/src/music-puzzle.yml
+++ b/src/music-puzzle.yml
@@ -2,7 +2,7 @@ musikisum/educandu-plugin-music-puzzle:
   name:
     en: Voice-Models
     de: Satzmodelle
-  key: 
+  modelKey: 
     en: Key (Begin)
     de: Tonart (Beginn)
   ve:
