--- a/src/music-puzzle.yml
+++ b/src/music-puzzle.yml
@@ -225,12 +225,25 @@ musikisum/educandu-plugin-music-puzzle:
     en: copy abc code
     de: ABC-Code kopieren
   abcCopyTtBevore:
-    en: 'click here to copy'
-    de: 'Hier klicken'
+    en: click here to copy
+    de: Hier klicken
   abcCopyTtAfter:
-    en: 'abc code copied to clipboard'
-    de: 'ABC-Code erfolgreich in die Zwischenablage kopiert'
+    en: abc code copied to clipboard
+    de: ABC-Code erfolgreich in die Zwischenablage kopiert
   displayLayout:
-    en: "Display settings:"
-    de: "Anzeige-Einstellungen:" 
+    en: 'Display settings:'
+    de: 'Anzeige-Einstellungen:'
+  hideUpperSystem:
+    en: Mute upper voices
+    de: Oberstimmen muten
+  hideLowerSystem:
+    en: Mute Bass
+    de: Bass muten
+  showExample:
+    en: Replaye (example)
+    de: Ersetzen (Beispiel)
+  emptyNoteSystems:
+    en: Empty Systems
+    de: Leere Systeme
+   
 
