Add changes bevore delete addPropBoolen

--- a/src/music-puzzle.yml
+++ b/src/music-puzzle.yml
@@ -22,7 +22,7 @@ musikisum/educandu-plugin-music-puzzle:
     de: Oberstimme
   dragAndDrop:
     en: drag & drop
-    de: Ziehen & Ablegen
+    de: Drag & Drop
   ms: 
     en: middle voice
     de: Mittelstimme
@@ -42,8 +42,8 @@ musikisum/educandu-plugin-music-puzzle:
     en: Circle of fifths
     de: Quintfallsequenz
   bassReverse:
-    en: Bass ↓ ↑
-    de: Bass ↓ ↑
+    en: Bass 5↓ 4↑
+    de: Bass 5↓ 4↑
   fauxbourdon:
     en: Fauxbourdon (7-6)
     de: Fauxbourdon (7-6)
