--- a/src/music-puzzle.yml
+++ b/src/music-puzzle.yml
@@ -255,8 +255,8 @@ musikisum/educandu-plugin-music-puzzle:
     en: Example
     de: Beispiel
   exampleTooltip:
-    en: 'Shows an Example for the Model:'
-    de: 'Zeigt ein Beispiel an für das Satzmodel:'
+    en: 'Provide an Example and Description for the selected Model:'
+    de: 'Gibt ein Beispiel und eine Beschreibung für die aktuelle Modellauswahl:'
   stretchLastLineTooltip:
     en: Stretch the last line of a abc-notation to the entire width in view mode
     de: Die letzte Notenlinie füllt im Ansichtsmodus die ganze Anzeigebreite aus
