--- a/src/progression-models.yml
+++ b/src/progression-models.yml
@@ -110,16 +110,16 @@ musikisum/educandu-plugin-progression-models:
   changeMode:
     en: chromatic
     de: chromatisch
-  parallelismusDiminished:
+  parallelismDiminuated:
     en: Parallelism (chrom.)
     de: Parallelismus (chrom.)
   numberOfSections:
     en: Sections
     de: Abschnitte
-  parallelismusDown:
+  parallelismDown:
     en: Parallelism down
     de: Parallelismus abwärts
-  parallelismusUp:
+  parallelismUp:
     en: Parallelism up
     de: Parallelismus aufwärts
   syncopation:
