--- a/src/progression-models.yml
+++ b/src/progression-models.yml
@@ -236,7 +236,7 @@ musikisum/educandu-plugin-progression-models:
   abcCopy:
     en: copy abc code
     de: ABC-Code kopieren
-  abcCopyTtBevore:
+  abcCopyTtBefore:
     en: click here to copy
     de: Hier klicken
   abcCopyTtAfter:
