Convert dimihuated parallelsim to new data model

--- a/src/progression-models.yml
+++ b/src/progression-models.yml
@@ -113,6 +113,9 @@ musikisum/educandu-plugin-progression-models:
   parallelismDiminuated:
     en: Parallelism (chrom.)
     de: Parallelismus (chrom.)
+  confirmation:
+    en: Confirmation
+    de: Bestätigung
   numberOfSections:
     en: Sections
     de: Abschnitte
