--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@musikisum/educandu-plugin-progression-models",
-  "version": "1.0.0",
+  "version": "0.7.0",
   "description": "A plugin for progression models in music",
   "type": "module",
   "exports": {
@@ -8,7 +8,7 @@
     "./*": "./dist/*"
   },
   "engines": {
-    "node": "^18.0.0"
+    "node": "^20.0.0"
   },
   "keywords": [
     "educandu"
@@ -24,13 +24,13 @@
     "abc-notation-transposition": "^1.0.5"
   },
   "devDependencies": {
-    "@ant-design/icons": "5.0.1",
-    "@educandu/dev-tools": "^11.6.0",
-    "@educandu/educandu": "3.3.1",
-    "@educandu/node-jsx-loader": "^3.2.0",
-    "@educandu/rooms-auth-lambda": "^6.2.0",
+    "@ant-design/icons": "5.5.1",
+    "@educandu/dev-tools": "^14.0.0",
+    "@educandu/educandu": "^3.21.0",
+    "@educandu/node-jsx-loader": "^4.0.0",
+    "@educandu/rooms-auth-lambda": "^6.2.1",
     "@vitest/coverage-v8": "^1.0.2",
-    "antd": "5.4.0",
+    "antd": "5.21.2",
     "del": "^7.1.0",
     "eslint": "^8.55.0",
     "eslint-plugin-import": "^2.29.0",
@@ -42,9 +42,9 @@
     "vitest": "^1.0.2"
   },
   "peerDependencies": {
-    "@ant-design/icons": ">=5.0.1",
-    "@educandu/educandu": ">=3.2.2",
-    "antd": ">=5.4.0",
+    "@ant-design/icons": ">=5.5.1",
+    "@educandu/educandu": ">=3.21.0",
+    "antd": ">=5.21.2",
     "joi": ">=17.11.0",
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0",
