--- a/src/progression-models.yml
+++ b/src/progression-models.yml
@@ -39,8 +39,14 @@ musikisum/educandu-plugin-progression-models:
     en: Cadence
     de: Kadenz
   circleOfFifths:
-    en: Circle of fifths
+    en: Circle of fifths (down)
     de: Quintfallsequenz
+  circleOfFifthsUp:
+    en: Circle of fifths (up)
+    de: Quintanstiegssequenz
+  endWithMajorChord:
+    en: End major
+    de: Ende Dur
   bassReverse:
     en: Bass 5↓ 4↑
     de: Bass 5↓ 4↑
