Implement mute systems and refactor code

--- a/src/progression-models.yml
+++ b/src/progression-models.yml
@@ -3,8 +3,8 @@ musikisum/educandu-plugin-progression-models:
     en: Voice-Models
     de: Satzmodelle
   modelKey: 
-    en: Key (Begin)
-    de: Tonart (Beginn)
+    en: Begin
+    de: Beginn
   ve:
     en: Voice exchange
     de: Stimmtausch
@@ -60,14 +60,14 @@ musikisum/educandu-plugin-progression-models:
     en: lament
     de: Lamentobass
   chromatic2:
-    en: Option
-    de: Variante
+    en: "#/b middle"
+    de: "#/b Mitte"
   chromatic3:
-    en: chrom. Bass
-    de: chrom. Bass
+    en: "#/b Bass"
+    de: "#/b Bass"
   italianSixth:
-    en: '#6'
-    de: '#6'
+    en: 'Ital. 6'
+    de: 'Überm. 6'
   isFinal:
     en: Ending
     de: Schluss
